# tauno-monitor

./: README.md  art.taunoerik.TaunoMonitor.json  art.taunoerik.tauno-monitor.json  art.taunoerik.tauno_monitor.json  changelog.txt  convert_usb_ids.sh  meson.build  update_translation_files.sh
.github/: FUNDING.yml
arduino-test-code/SerialCallResponse/: SerialCallResponse.ino
arduino-test-code/SerialCallResponseASCII/: SerialCallResponseASCII.ino
arduino-test-code/line_ends/: line_ends.ino
data/: art.taunoerik.TaunoMonitor.appdata.xml  art.taunoerik.TaunoMonitor.desktop.in  art.taunoerik.TaunoMonitor.gschema.xml  art.taunoerik.TaunoMonitor.metainfo.xml.in  art.taunoerik.tauno-monitor.appdata.xml  art.taunoerik.tauno-monitor.desktop.in  art.taunoerik.tauno-monitor.gschema.xml  art.taunoerik.tauno-monitor.metainfo.xml.in  art.taunoerik.tauno-monitor.service.in  art.taunoerik.tauno_monitor.desktop.in  art.taunoerik.tauno_monitor.gschema.xml  art.taunoerik.tauno_monitor.metainfo.xml.in  art.taunoerik.taunomonitor.desktop.in  art.taunoerik.taunomonitor.gschema.xml  art.taunoerik.taunomonitor.metainfo.xml.in  meson.build
data/icons/: meson.build
data/screenshots/: banner.xcf
po/: LINGUAS  POTFILES  de.po  ee.po  et.po  et.po~  meson.build  ru.po  ru.po~  tauno-monitor.pot  tauno_monitor.pot  taunomonitor.pot
snap/: snapcraft.yaml
snap/gui/: art.taunoerik.tauno-monitor.desktop
src/: guide.py  guide.ui  main.py  meson.build  preferences.py  preferences.ui  tauno-monitor.gresource.xml  tauno-monitor.in  tauno_logging.py  tauno_monitor.gresource.xml  tauno_monitor.in  tauno_serial.py  taunomonitor.gresource.xml  taunomonitor.in  tool_baud.py  tool_baud.ui  usb_db.py  window.py  window.ui  window.ui.txt
src/gtk/: help-overlay.ui
